fixed distorted map controls and added icons to map

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,8 @@
  *= require_tree .
  *= require _font-awesome
  */
+
+// added to prevent distortion of map controls
+#mapCanvas label { width: auto; display:inline; }
+#mapCanvas img { max-width: none; }
+
