--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -40,3 +40,13 @@ a:hover {
 .icon-chevron-down {
 	color: #049CDB;
 }
+
+.icon-home, .icon-asterisk {
+	color: blue;
+}
+
+// added to prevent distortion of map controls
+
+#map-canvas label { width: auto; display:inline; }
+#map-canvas img { max-width: none; }
+
